[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../crates/api" }
storage = { path = "../../crates/storage" }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
