[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
analytics = { path = "../../crates/analytics" }
storage = { path = "../../crates/storage" }
ingest = { path = "../../crates/ingest" }
alert = { path = "../../crates/alert" }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
