[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.20"
futures = "0.3"
storage = { path = "../storage" }
